# NotionLens

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
notionlens/: __init__.py  capture.py  cli.py  config.py
